--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ sections:
   - title: Our History
     desc: YEP was founded in 2010 by three individuals who recognized the lack of effective networking platforms for the diverse Ethiopian professionals in the Washington Metropolitan area.
     image: assets/images/programs/leadership_team_2.jpg
-    path: /about/History
+    path: /about/history
   - title: Accomplishments
     desc: For close to a decade, YEP has hosted numerous Guest Speakers, Networking events, Career Development workshops, New-comers Workshop and more.
     image: assets/images/programs/Empower_award.jpg
@@ -31,9 +31,7 @@ sections:
         <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
           Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence, and
           success.
-          <img src=about_us.jpg">
-           </p>
-          
+           </p>  
       </div>
     </div>
   </div>
@@ -46,13 +44,15 @@ sections:
             provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
             share experiences, exchange valuable resources and pursue community development initiatives.
           </p>
+          <p
+             <img src="/assets/images/programs/about_us.jpg >
+          </p>
           <p style="margin-bottom: 1em">
           YEP was founded in 2010 by three individuals who recognized
           the lack of effective networking platforms for the diverse
           Ethiopian professionals in the Washington Metropolitan area.
           YEP began by featuring inspirational speakers, hosting educational sessions and providing
           networking opportunities to support its mission.
-
           </p>
             <div class="col-sm-12 col-md-6">
           <figure class="flex-video widescreen">
