--- a/_pages/history.html
+++ b/_pages/history.html
@@ -1,7 +1,7 @@
 ---
 layout: about
-title: Origin
-header: Origin
+title: history
+header: Our History
 permalink: /about/history/
 body_class: about
 ---
