--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body_class: front
     <div class="container">
       <div class="row">
         <div class="col-sm-12 text-center margin-bottom-4">
-          <h2 class="h1 section-head">What We Do</h2>
+          <h2 class="h1 section-head">Get Involved</h2>
           <p class="intro">Building a platform. Connecting the Ethiopian Diaspora</p>
         </div>
         {% assign programs = site.programs | where:'featured', 'true' %}
