--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ sections:
         <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
           Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence, and
           success.
-           </p>  
+         </p>
       </div>
     </div>
   </div>
@@ -44,9 +44,7 @@ sections:
             provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
             share experiences, exchange valuable resources and pursue community development initiatives.
           </p>
-          <p
-             <img src="/assets/images/programs/about_us.jpg >
-          </p>
+         <img src="/assets/images/programs/about_us.jpg" />
           <p style="margin-bottom: 1em">
           YEP was founded in 2010 by three individuals who recognized
           the lack of effective networking platforms for the diverse
@@ -59,7 +57,7 @@ sections:
             <iframe width="560" height="315" src="https://www.youtube.com/embed/r6eMugcQuH8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </figure>
         </div>
-        <div class="col-sm-12 col-md-6">                            
+        <div class="col-sm-12 col-md-6">
         </div>
       </div>
     </div>
