--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -5,8 +5,8 @@ header: Mission
 permalink: /about/mission/
 body_class: about
 ---
-<div class="container bg-white pad-by-50">
-  <h1 class="margin-top-0 margin-bottom-2">Our Mission & Vision</h1>
+<div class="container bg-white pad-by-20">
+  <h1 class="margin-top-0 margin-bottom-2">Our Vision and Mission </h1>
 </div>
 <div class="container bg-white">
   <h3>Our Vision</h3>
@@ -17,8 +17,8 @@ body_class: about
 
   <h3>Goals</h3>
   <ul>
-    <li>Develop and/or enhance skill sets and knowledge to achieve ongoing career goals</li>
-    <li>Enables a professional/student mentorship</li>
+    <li>Creating networking opportunties for members to share resources </li>
+    <li>Providing a platform that enables members to share job opportunities </li>
     <li>Providing resources to complement specific skill development such as leadership, public speaking, entrepreneurship, etc.</li>
   </ul>
 </div>
