--- a/_programs/recent-arrival.html
+++ b/_programs/recent-arrival.html
@@ -1,9 +1,9 @@
 ---
 layout: program
-title: Recent Arrival
+title: Recent Arrivals
 img: recent-arrival.jpg
 manager: Vacant
-description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tincidunt dapibus sapien eu finibus. Cras accumsan consequat ultrices. Suspendisse bibendum at eros vitae suscipit. In elit lacus, commodo vitae eleifend quis, eleifend et justo. Donec semper iaculis auctor. Suspendisse non purus enim. Aliquam erat volutpat. Vestibulum sit amet dolor vulputate, aliquam mauris sit amet, tempor mauris. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec rhoncus hendrerit turpis vel rhoncus. Donec vulputate vitae nisi eu rutrum.
+description: Offer sustainable resettlement programs and mobilize community leaders to offer these professional services that are necessary for our new residents. 
 categories:
 - programs
 ---
