--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -2,7 +2,7 @@
 layout: program
 title: Career Development
 img: career-development.jpg
-description: The Career Development Program provides a platform to help members in their career development journey, from finding and gaining employment through progressing towards individual career goals. YEP organizes various programs and events such as invited speakers series, panel discussions and virtual webcasts on career development topics. We will also organize Resume and Cover Letter writing workshops and mock interview sessions where you can gain valuable individualized feedback.
+description:Providing the tools and resources that help members excel in their different stages of career development journey.
 categories:
 - programs
 ---
