--- a/_programs/recent-arrival.html
+++ b/_programs/recent-arrival.html
@@ -1,7 +1,7 @@
 ---
 layout: program
 title: Recent Arrivals
-img: recent-arrival.jpg
+img: recent-arrival.JPG
 manager: Vacant
 description: Offer sustainable resettlement programs and mobilize community leaders to offer these professional services that are necessary for our new residents. 
 categories:
