--- a/about.html
+++ b/about.html
@@ -33,7 +33,9 @@ sections:
           success.
          </p>
       </div>
-      <img src="/assets/images/programs/about_us.jpg" />
+      <div class="text-center">
+        <img src="/assets/images/programs/about_us.jpg" />
+      </div>
     </div>
   </div>
   <section class="page-head">
