--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -5,21 +5,17 @@ header: Accomplishments
 permalink: /about/accomplishments/
 body_class: about
 ---
-<div class="row">
-  <div class="col-sm-12">
-    <h1>Accomplishments</h1>
-    
-    <p>
-    Today, YEP convenes more than 5,000 members with the primary focus on developing and maximizing the Ethiopian community. As YEP grows, we continue to update our benefits and offerings to support our members in the best ways possible.
-    </p>
-    <h2>Past Activities</h2>
-    <ul>
-			<li><b>Speaker Series:</b> Feature inspirational speakers to educate and empower young professionals</li>
-			<li><b>Career Workshops:</b> Host workshops to help members further develop job-seeking skills and explore career opportunities. </li>
-			<li><b>Mentorship Program:</b> Provide academic support and guidance to students in high school and college</li>
-			<li><b>Supporting Newcomers:</b> Assist newcomers to the United States in their educational and career path  </li>
-			<li><b>Networking:</b> Create opportunities for Ethiopian professionals to meet and share resources among fellow professionals </li>
-			<li><b>Annual Fundraising Gala:</b> Host 300+ professionals to raise funds in support of future programs</li>
-    </ul>
-  </div>
-</div>
+<h1 class="margin-top-4">Accomplishments</h1>
+
+<p>
+Today, YEP convenes more than 5,000 members with the primary focus on developing and maximizing the Ethiopian community. As YEP grows, we continue to update our benefits and offerings to support our members in the best ways possible.
+</p>
+<h2>Past Activities</h2>
+<ul>
+  <li><b>Speaker Series:</b> Feature inspirational speakers to educate and empower young professionals</li>
+  <li><b>Career Workshops:</b> Host workshops to help members further develop job-seeking skills and explore career opportunities. </li>
+  <li><b>Mentorship Program:</b> Provide academic support and guidance to students in high school and college</li>
+  <li><b>Supporting Newcomers:</b> Assist newcomers to the United States in their educational and career path  </li>
+  <li><b>Networking:</b> Create opportunities for Ethiopian professionals to meet and share resources among fellow professionals </li>
+  <li><b>Annual Fundraising Gala:</b> Host 300+ professionals to raise funds in support of future programs</li>
+</ul>
