--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -5,20 +5,17 @@ header: Mission
 permalink: /about/mission/
 body_class: about
 ---
-<div class="container bg-white pad-by-40">
-  <h1 class="margin-top-0 margin-bottom-2">Our Vision and Mission </h1>
-</div>
-<div class="container bg-white">
-  <h3>Our Vision</h3>
-  <p>A strong community that shares ideas, skills and resources to enrich lives.</p>
-  
-  <h3>Our Mission</h3>
-  <p>To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
+<h1 class="margin-top-4">Our Vision and Mission </h1>
 
-  <h3>Goals</h3>
-  <ul>
-    <li>Creating networking opportunties for members to share resources </li>
-    <li>Providing a platform that enables members to share job opportunities </li>
-    <li>Providing resources to complement specific skill development such as leadership, public speaking, entrepreneurship, etc.</li>
-  </ul>
-</div>
+<h3>Our Vision</h3>
+<p>A strong community that shares ideas, skills and resources to enrich lives.</p>
+
+<h3>Our Mission</h3>
+<p>To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
+
+<h3>Goals</h3>
+<ul>
+  <li>Creating networking opportunties for members to share resources </li>
+  <li>Providing a platform that enables members to share job opportunities </li>
+  <li>Providing resources to complement specific skill development such as leadership, public speaking, entrepreneurship, etc.</li>
+</ul>
