--- a/_pages/team.html
+++ b/_pages/team.html
@@ -5,33 +5,25 @@ header: Team
 permalink: /about/team/
 body_class: team
 ---
-<div class="prose bg-white">
-  <div class="container pad-by-50">
-    <div class="row">
-      <div class="col-sm-12">
-        <h1 class="margin-top-0 margin-bottom-2">Our Team</h1>
+<h1 class="margin-top-4">Our Team</h1>
+
+<div class="row card-grid">
+  {% assign persons = site.data.team %}
+  {% for person in persons %}
+  <div class="col-sm-4">
+    <div class="card">
+      <figure>
+        {% if person.image %}
+          <img src="{{ site.url }}/assets/images/team/{{ person.image }}">
+        {% else %}
+          <img src="{{ site.url }}/assets/images/team/vacant.jpg">
+        {% endif %}
+      </figure>
+      <div class="copy-holder">
+        <h3>{{ person.name }}</h3>
+        <p>{{ person.position }}</p>
       </div>
-    </div>
-    <div class="row card-grid">
-      {% assign persons = site.data.team %}
-      {% for person in persons %}
-      <div class="col-sm-4">
-        <div class="card">
-          <figure>
-            {% if person.image %}
-              <img src="{{ site.url }}/assets/images/team/{{ person.image }}">
-            {% else %}
-              <img src="{{ site.url }}/assets/images/team/vacant.jpg">
-            {% endif %}
-          </figure>
-          <div class="copy-holder">
-            <h3>{{ person.name }}</h3>
-            <p>{{ person.position }}</p>
-          </div>
-        </div>
-      </div>
-      {% endfor %}
     </div>
   </div>
+  {% endfor %}
 </div>
-
