--- a/index.html
+++ b/index.html
@@ -38,3 +38,22 @@ body_class: front
     </div>
   </section>
 </div>
+
+<section id="email-signup" style="background: #1E8BC9">
+  <div class="container" style="padding-top: 75px; padding-bottom: 75px;">
+    <div class="row">
+      <div class="col-sm-12">
+        <h2 class="margin-top-0">Stay Connected</h2>
+        <p class="text-muted text-center" style="color: #fff">Subscribe to Our Newsletter</p>
+      </div>
+      <div class="col-sm-6 col-sm-offset-3 margin-top-2">
+        <div class="input-group input-group-lg">
+          <input type="text" class="form-control" placeholder="Enter your email address">
+          <span class="input-group-btn">
+            <button class="btn btn-primary" type="button">Subscribe</button>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
