--- a/_programs/diaspora-community-engagement.html
+++ b/_programs/diaspora-community-engagement.html
@@ -8,6 +8,6 @@ featured: true
 ---
 The Diaspora and Community Engagement (DCE) Program looks to strengthen community 
 relations and support the development of a cohesive network through in-person and virtual programming. 
-DCE was developed with the intention of addressing topics that are not usually address in YEP’s regular programming. 
+DCE is developed with the intention of addressing topics that are not usually addressed in YEP’s regular programming. 
 It will operate as an agent to facilitate community problem solving and identify opportunities of Diaspora mobilization and partnerships.
 
