--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -2,24 +2,24 @@
 layout: program
 title: Career Development
 img: career-development.jpg
-description: Providing the tools and resources that help members excel in their different stages of career development journey.
+description: Providing the tools and resources that enable members to excel in their different stages of career development journey.
 categories:
 - programs
 ---
 <h2>Program Overview</h2>
 
 <p>
-The Career Development Program provides a platform to help members in their career development journey, 
-from finding and gaining employment through progressing towards individual career goals. 
-YEP organizes various programs and events such as invited speakers series, panel discussions and 
-virtual webcasts on career development topics. We will also organize Resume and Cover Letter writing workshops and 
-mock interview sessions where you can gain valuable individualized feedback.
+The YEP Career Development Program provides a platform that supports members in their career development journey, 
+from exploring and gaining employment through progressing towards individual career goals. 
+YEP organizes various programs and events such as guest speakers series, panel discussions and 
+virtual webcasts on career development topics. We also organize resume and cover letter writing workshops and 
+mock interview sessions where members can gain tailored and valuable feedback.
 </p>
 
 <h2>Program Mission</h2>
 
 <p>
- Provide a platform where members can develop and enhance skill sets and knowledge to gain employment, and continue to achieve career goals after joining the workforce.
+Provide a platform where members can develop and enhance skill sets and knowledge to gain employment, and continue to design and achieve career goals after joining the workforce.
 </p>
 
 <h2>Program Offerings</h2>
@@ -29,19 +29,15 @@ If you are a job seeker, know of a job opening or have suggestions for the futur
 </p>
 
 <p>
-Job Seekers: Are you looking for a job or just starting out on your career? Career Development Program can help you with your job search! Through partnerships with recruiters, jobs advertised by YEP members and online job search tools, we will work to help match you with opportunities that are a good fit. Fill out this form for job seekers and we will contact you within a week.
+Job Seekers: Are you looking for a job or just starting out on your career? Career Development Program can help you with your job search! Through partnerships with recruiters, jobs advertisements by YEP members and online job search tools, we will work to help match you with compatible opportunities. Fill out this form for job seekers and we will contact you within a week. Altough we CaN NOT guarantee employment, the aim of this program is to help expose you to available opportunities.
 </p>
 
 <p>
-Disclaimer: We cannot guarantee employment. The aim of this program is to help expose you to more opportunities that are available.
-</p>
-
-<p>
-Job Advertisers: Do you have a job opportunity you want to share with YEP members? You can let us know using two ways: email the Program team the link to the job description or fill out this form to let us know more about it. 
+Job Advertisers: Do you have a job opportunity you want to share with YEP members? You can let us know using two ways: email the Program team with the direct website link to the job description or fill out this form to let us know more about it. 
 </p> 
 
 <p>
-Feedback for the Career Development Program: We would love to hear your feedback on what programs and events would provide you more value on your career path. Please let us know by filling out our Survey, where you can also indicate if you have knowledge or skills you would like to share as well!  
+Feedback for the Career Development Program: We would love to hear your feedback on what programs and events will provide you more value on your career path. Please let us know by filling out our Survey, where you can also indicate if you have information or skills you would like to share as well!  
 </p> 
 
 <h2>Career Program Calendar</h2>
