--- a/about.html
+++ b/about.html
@@ -32,9 +32,15 @@ sections:
           Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence, and
           success.
          </p>
+        <p
+        Your Ethiopian Professionals Network (YEP) is a 501(c)(3), non-profit, non-political, and non-religious organization that
+            provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
+            share experiences, exchange valuable resources and pursue community development initiatives.
+           </p>
       </div>
     </div>
   </div>
+  <!--
   <section class="page-head">
     <div class="container">
       <div class="row">
@@ -63,7 +69,7 @@ sections:
     </div>
   </section>
 </div>
-
+-->
 <div class="prose bg-white">
   <div class="overview">
     <div class="container pad-by-50">
