--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@ sections:
           Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence, and
           success.
          </p>
-        <p
+        <p style="margin-bottom: 1em">
         Your Ethiopian Professionals Network (YEP) is a 501(c)(3), non-profit, non-political, and non-religious organization that
             provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
             share experiences, exchange valuable resources and pursue community development initiatives.
