--- a/about.html
+++ b/about.html
@@ -29,13 +29,15 @@ sections:
       </div>
       <div class="container">
         <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
-          Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence, and
-          success.
-         </p>
-        <p style="margin-bottom: 1em">
-        Your Ethiopian Professionals Network (YEP) is a 501(c)(3), non-profit, non-political, and non-religious organization that
+          Founded in 2010, YEP is a 501(c)(3), non-profit, non-political, and non-religious organization that
             provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
             share experiences, exchange valuable resources and pursue community development initiatives.
+         </p>
+        <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
+       To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.
+           </p>
+         <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
+       A strong community that shares ideas, skills and resources to enrich lives.
            </p>
       </div>
     </div>
