--- a/about.html
+++ b/about.html
@@ -33,11 +33,18 @@ sections:
             provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
             share experiences, exchange valuable resources and pursue community development initiatives.
          </p>
-        <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
-       To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.
-           </p>
-         <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
-       A strong community that shares ideas, skills and resources to enrich lives.
+       <h3>Our Vision</h3>
+<pstyle="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">A strong community that shares ideas, skills and resources to enrich lives.</p>
+
+<h3>Our Mission</h3>
+<pstyle="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
+
+<h3>Goals</h3>
+<ul>
+  <li>Creating networking opportunties for members to share resources </li>
+  <li>Providing a platform that enables members to share job opportunities </li>
+  <li>Providing resources to complement specific skill development such as leadership, public speaking, entrepreneurship, etc.</li>
+</ul>
            </p>
       </div>
     </div>
