--- a/about.html
+++ b/about.html
@@ -34,10 +34,14 @@ sections:
             share experiences, exchange valuable resources and pursue community development initiatives.
          </p>
        <h3>Our Vision</h3>
-<pstyle="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">A strong community that shares ideas, skills and resources to enrich lives.</p>
+<pstyle="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
+  A strong community that shares ideas, skills and resources to enrich lives.
+  </p>
 
 <h3>Our Mission</h3>
-<pstyle="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
+<pstyle="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
+  To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.
+  </p>
 
 <h3>Goals</h3>
 <ul>
@@ -45,7 +49,6 @@ sections:
   <li>Providing a platform that enables members to share job opportunities </li>
   <li>Providing resources to complement specific skill development such as leadership, public speaking, entrepreneurship, etc.</li>
 </ul>
-           </p>
       </div>
     </div>
   </div>
