--- a/about.html
+++ b/about.html
@@ -35,20 +35,14 @@ sections:
             provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
             share experiences, exchange valuable resources and pursue community development initiatives.
          </p>
-       <h2>
-         Our Vision
-         </h3>
+       <h1> Our Vision </h1>
 <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
   A strong community that shares ideas, skills and resources to enrich lives.
   </p>
-
-<h1>
-  Our Mission
-  </h1>
+<h1> Our Mission </h1>
 <p style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
   To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.
   </p>
-
 <h1>Goals</h1>
 <ul style="font-size: 2rem; font-weight: 400; margin-bottom: 1.5em;">
   <li>Creating networking opportunties for members to share resources </li>
