--- a/about.html
+++ b/about.html
@@ -25,9 +25,7 @@ sections:
   <div class="container pad-by-50">
     <div class="row">
       <div class="col-sm-12">
-        <h1 class="margin-top-0 margin-bottom-2">
-          About Us
-        </h1>
+        <h1 class="margin-top-0 margin-bottom-2"> About Us </h1>
       </div>
       <div class="container">
         <p style="font-size: 2rem; font-weight: 400; margin-bottom: 0.05em;">
@@ -36,15 +34,15 @@ sections:
             share experiences, exchange valuable resources and pursue community development initiatives.
          </p>
        <h1> Our Vision </h1>
-<p style="font-size: 2rem; font-weight: 400; margin-bottom: 0.5em;">
+<p style="font-size: 2rem; font-weight: 400; margin-bottom: 0.05em;">
   A strong community that shares ideas, skills and resources to enrich lives.
   </p>
 <h1> Our Mission </h1>
-<p style="font-size: 2rem; font-weight: 400; margin-bottom: 0.5em;">
+<p style="font-size: 2rem; font-weight: 400; margin-bottom: 0.05em;">
   To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.
   </p>
 <h1>Goals</h1>
-<ul style="font-size: 2rem; font-weight: 400; margin-bottom: 0.5em;">
+<ul style="font-size: 2rem; font-weight: 400; margin-bottom: 0.05em;">
   <li>Creating networking opportunties for members to share resources </li>
   <li>Providing a platform that enables members to share job opportunities </li>
   <li>Providing resources to complement specific skill development such as leadership, public speaking, entrepreneurship, etc.</li>
