--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 body_class: front
 ---
-<section class="hero" style="background-image: url(assets/images/hero/about_us_4.jpg)">
+<section class="hero" style="background-image: url(assets/images/hero/about_us_1.png)">
   <div class="inner">
     <div class="copy">
       <h1>The Future of Ethiopian Professionals</h1>
