--- a/index.html
+++ b/index.html
@@ -40,19 +40,52 @@ body_class: front
 </div>
 
 <section id="email-signup" style="background: #1E8BC9">
-  <div class="container" style="padding-top: 75px; padding-bottom: 75px;">
+  <div class="container" style="padding-top: 10px; padding-bottom: 10px;">
     <div class="row">
-      <div class="col-sm-12">
+      <div class="col-md-12">
         <h2 class="margin-top-0">Stay Connected</h2>
         <p class="text-muted text-center" style="color: #fff">Subscribe to Our Newsletter</p>
       </div>
-      <div class="col-sm-6 col-sm-offset-3 margin-top-2">
-        <div class="input-group input-group-lg">
-          <input type="text" class="form-control" placeholder="Enter your email address">
-          <span class="input-group-btn">
-            <button class="btn btn-primary" type="button">Subscribe</button>
-          </span>
+      <div class="col-md-12">
+        <!-- Begin MailChimp Signup Form -->
+        <div id="mc_embed_signup">
+          <form action="https://yepnetworks.us11.list-manage.com/subscribe/post?u=5d936b18dafd103ed356a89c6&amp;id=620021804a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-horizontal hs-form" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <div class="col-md-4 col-md-offset-4">
+                <div class="col-md-12">
+                  <div class="mc-field-group col-md-6">
+                    <label for="mce-FNAME" class="control-label">First Name  <span class="asterisk">*</span></label>
+                    <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="mc-field-group col-md-6">
+                    <label for="mce-LNAME" class="control-label">Last Name  <span class="asterisk">*</span></label>
+                    <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="mc-field-group col-md-12">
+                    <label for="mce-EMAIL" class="control-label">Email Address <span class="asterisk">*</span></label>
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                  </div>
+                </div>
+                <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5d936b18dafd103ed356a89c6_620021804a" tabindex="-1" value=""></div>
+                <div class="clear"></div>
+
+                <div class="" style="padding-left: 30px;width:93%">
+                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="hs-button primary large">
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
+        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='MMERGE3';ftypes[3]='radio';fnames[4]='MMERGE4';ftypes[4]='radio';fnames[5]='MMERGE5';ftypes[5]='dropdown';fnames[6]='MMERGE6';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+        <!--End mc_embed_signup-->
       </div>
     </div>
   </div>
