Removed titles and subtitles from sections.

--- a/index.html
+++ b/index.html
@@ -43,10 +43,6 @@ body_class: front
   <div class="container" style="padding-top: 10px; padding-bottom: 10px;">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="margin-top-0">Stay Connected</h2>
-        <p class="text-muted text-center" style="color: #fff">Subscribe to Our Newsletter</p>
-      </div>
-      <div class="col-md-12">
         <!-- Begin MailChimp Signup Form -->
         <div id="mc_embed_signup">
           <form action="https://yepnetworks.us11.list-manage.com/subscribe/post?u=5d936b18dafd103ed356a89c6&amp;id=620021804a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-horizontal hs-form" target="_blank" novalidate>
@@ -93,8 +89,7 @@ body_class: front
 
 <section id="featured">
   <div class="container">
-    <h2 class="h1 section-head">News &amp; Updates</h2>
-    <p class="intro">Learn about our latest activities</p>
+    <h2 class="h1 section-head" style="margin-bottom: 1em">Latest Activities</h2>
     <div class="row">
       {% for item in site.data.featured %}
         <div class="col-sm-6 col-md-3">
