--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@ group: navigation
 permalink: /events/
 body_class: events
 ---
-<div id="hero" style="background-image: url(/assets/images/events/summer-gala-2017_2.JPG); background-position: center 0px;">
+<div id="hero" style="background-image: url(/assets/images/events/women_power_hour.png); background-position: center 0px;">
   <div class="hero-overlay"></div>
   <div class="hero-content-wrapper">
     <div class="container text-center">
