--- a/_pages/team.html
+++ b/_pages/team.html
@@ -6,7 +6,7 @@ permalink: /about/team/
 body_class: team
 ---
 <h1 class="margin-top-4">Our Team</h1>
-
+<p>YEP team members are a dedicated team members.</p>
 <div class="row card-grid">
   {% assign persons = site.data.team %}
   {% for person in persons %}
