--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@ group: navigation
 permalink: /about/
 body_class: about
 sections:
+  - title: Mission & Vision
   - title: Our History
     desc: YEP was founded in 2010 by three individuals who recognized the lack of effective networking platforms for the diverse Ethiopian professionals in the Washington Metropolitan area.
     image: assets/images/programs/leadership_team_2.jpg
