--- a/about.html
+++ b/about.html
@@ -26,6 +26,9 @@ sections:
     <div class="row">
       <div class="col-sm-12">
         <h1 class="margin-top-0 margin-bottom-2"> About Us </h1>
+         <p style="margin-bottom: 1em">
+        Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success to have a positive impact in the world. Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success to have a positive impact in the world. 
+           </p>
       </div>
       <div class="container">
         <p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
