--- a/about.html
+++ b/about.html
@@ -19,14 +19,13 @@ sections:
     image: assets/images/programs/team_pic.jpg
     path: /about/team
 ---
-
 {% include about-nav.html %}
 <div class="prose bg-white">
   <div class="container pad-by-50">
     <div class="row">
       <div class="col-sm-12">
-        <h1 class="margin-top-0 margin-bottom-2"> About Us </h1>
-         <p style="margin-bottom: 1em">
+        <h1 class="margin-top-0 margin-bottom-2"> About YEP </h1>
+         <p class="intro">
         Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success to have a positive impact in the world. Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success to have a positive impact in the world. 
            </p>
       </div>
