--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ sections:
     <div class="row">
       <div class="col-sm-12">
         <h1 class="margin-top-0 margin-bottom-2"> About YEP </h1>
-         <p class="intro">
+         <p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
         Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success to have a positive impact in the world. Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success to have a positive impact in the world. 
            </p>
       </div>
@@ -41,12 +41,12 @@ sections:
         </div>
         <div class="col-sm-12 col-md-6">
           <h2 style="margin-top: 0">Who We Are</h2>
-          <p style="margin-bottom: 1em">
+          <p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
             Your Ethiopian Professionals Network (YEP) is a 501(c)(3), non-profit, non-political, and non-religious organization that
             provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
             share experiences, exchange valuable resources and pursue community development initiatives.
           </p>
-          <p style="margin-bottom: 1em">
+         <p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
           YEP was founded in 2010 by three individuals who recognized
           the lack of effective networking platforms for the diverse
           Ethiopian professionals in the Washington Metropolitan area.
