--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ sections:
   <div class="container pad-by-50">
     <div class="row">
       <div class="col-sm-12">
-        <h1 class="margin-top-0 margin-bottom-2"> About YEP </h1>
+        <h1 class="margin-top-0 margin-bottom-2"> About </h1>
          <p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
         Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success to have a positive impact in the world. Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success to have a positive impact in the world. 
            </p>
@@ -46,13 +46,7 @@ sections:
             provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
             share experiences, exchange valuable resources and pursue community development initiatives.
           </p>
-         <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 0.5em;">
-          YEP was founded in 2010 by three individuals who recognized
-          the lack of effective networking platforms for the diverse
-          Ethiopian professionals in the Washington Metropolitan area.
-          YEP began by featuring inspirational speakers, hosting educational sessions and providing
-          networking opportunities to support its mission.
-          </p>
+        <a href="/about/mission" class="btn btn-donate">Mission &amp; Vision</a>
         </div>
       </div>
     </div>
