--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ sections:
     <div class="row">
       <div class="col-sm-12">
         <h1 class="margin-top-0 margin-bottom-2"> About </h1>
-         <p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
+         <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 0.5em;">
         Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success to have a positive impact in the world. Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success to have a positive impact in the world. 
            </p>
       </div>
@@ -46,7 +46,7 @@ sections:
             provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
             share experiences, exchange valuable resources and pursue community development initiatives.
           </p>
-        <a href="/about/mission" class="btn btn-donate">Mission &amp; Vision</a>
+        <a href="/about/mission" class="btn btn-donate">Vision &amp Mission; </a>
         </div>
       </div>
     </div>
