--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@ sections:
             provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
             share experiences, exchange valuable resources and pursue community development initiatives.
           </p>
-        <a href="/about/mission" class="btn btn-donate">Vision &amp Mission; </a>
+        <a href="/about/mission" class="btn btn-donate">Vision &amp; Mission </a>
         </div>
       </div>
     </div>
