--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ sections:
       <div class="col-sm-12">
         <h1 class="margin-top-0 margin-bottom-2"> About </h1>
          <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 0.5em;">
-        Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success to have a positive impact in the world. Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success to have a positive impact in the world. 
+        Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success. 
            </p>
       </div>
       <div class="container">
@@ -42,7 +42,7 @@ sections:
         <div class="col-sm-12 col-md-6">
           <h2 style="margin-top: 0">Who We Are</h2>
           <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 0.5em;">
-            Your Ethiopian Professionals Network (YEP) is a 501(c)(3), non-profit, non-political, and non-religious organization that
+           Founded in 2010, YEP is a 501(c)(3), non-profit, non-political, and non-religious organization that
             provides a broader platform for the Ethiopian diaspora across all professions and walks of life to connect, network,
             share experiences, exchange valuable resources and pursue community development initiatives.
           </p>
