--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -5,16 +5,16 @@ header: Mission
 permalink: /about/mission/
 body_class: about
 ---
-<h1 class="margin-top-4">Our Vision and Mission </h1>
-
-<h3>Our Vision</h3>
-<p>A strong community that shares ideas, skills and resources to enrich lives.</p>
-
-<h3>Our Mission</h3>
-<p>To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
-
-<h3>Goals</h3>
-<ul>
+<h1> Our Vision </h1>
+<p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
+  A strong community that shares ideas, skills and resources to enrich lives.
+  </p>
+<h1> Our Mission </h1>
+<p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
+  To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.
+  </p>
+<h1>Goals</h1>
+<ul style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
   <li>Creating networking opportunties for members to share resources </li>
   <li>Providing a platform that enables members to share job opportunities </li>
   <li>Providing resources to complement specific skill development such as leadership, public speaking, entrepreneurship, etc.</li>
