--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ body_class: front
 <section class="hero" style="background-image: url(assets/images/hero/about_us_1.png)">
   <div class="inner">
     <div class="copy">
-      <h1>The Future of Ethiopian Professionals</h1>
-      <p>Securing the skills necessary to build a community for the next generation of thinkers and leaders.</p>
+      <h1>The Future of the Ethiopian Diaspora</h1>
+      <p>Harnessing the power of the diaspora to transform communities and shape the next generation of thinkers and leaders.</p>
     </div>
   </div>
 </section>
@@ -17,7 +17,7 @@ body_class: front
       <div class="row">
         <div class="col-sm-12 text-center margin-bottom-4">
           <h2 class="h1 section-head">Get Involved</h2>
-          <p class="intro">Building a platform. Connecting the Ethiopian Diaspora</p>
+          <p class="intro">Building a platform, connecting the Ethiopian Diaspora</p>
         </div>
         {% assign programs = site.programs | where:'featured', 'true' %}
         {% for program in programs limit:3 %}
