--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ body_class: front
 
 <section id="featured">
   <div class="container">
-    <h2 class="h1 section-head" style="margin-bottom: 1em">Latest Activities</h2>
+    <h2 class="h1 section-head" style="margin-bottom: 1em">Latest Updates</h2>
     <div class="row">
       {% for item in site.data.featured %}
         <div class="col-sm-6 col-md-3">
