--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body_class: front
           <h2 class="h1 section-head">Get Involved</h2>
           <p class="intro">Building a platform, connecting the Ethiopian Diaspora</p>
         </div>
-     <!--   {% assign programs = site.programs | where:'featured', 'true' %}
+      {% assign programs = site.programs | where:'featured', 'true' %}
         {% for program in programs limit:3 %}
         <div class="col-sm-5 col-md-4">
           <div class="card">
@@ -37,8 +37,8 @@ body_class: front
       </div>
     </div>
   </section>
-</div>-->
-{% assign programs = site.programs | where:'featured', 'true' %}
+</div>
+ <!-- {% assign programs = site.programs | where:'featured', 'true' %}
         {% for program in programs limit:3 %}
           <div class="col-xs-12 col-md-4">
             <div class="card">
@@ -53,8 +53,8 @@ body_class: front
                 </p>
               </div>
             </div>
-          </div><!-- /.col -->
-          <div class="col-xs-12 col-md-4">
+          </div><!-- /.col-->
+         <!--  <div class="col-xs-12 col-md-4">
             <div class="card">
               <figure>
                 <img src="https://s3.amazonaws.com/static.pachamama.org/img/home/programs_callout_2.jpg">
@@ -67,7 +67,7 @@ body_class: front
               </div>
             </div>
           </div><!-- /.col -->
-          <div class="col-xs-12 col-md-4">
+          <!-- <div class="col-xs-12 col-md-4">
             <div class="card">
               <figure>
                 <img src="https://s3.amazonaws.com/static.pachamama.org/img/home/programs_callout_3.jpg">
@@ -82,8 +82,7 @@ body_class: front
           </div>
         </div><!-- /.row -->
       </div><!-- /.container -->
-    </section>        
-        
+     <!--</section> --> 
         
 <section id="email-signup" style="background: #1E8BC9">
   <div class="container" style="padding-top: 10px; padding-bottom: 10px;">
