--- a/events.html
+++ b/events.html
@@ -7,7 +7,7 @@ permalink: /events/
 body_class: events
 ---
 <!-- <div id="hero" style="background-image: url(/assets/images/events/women_power_hour.png); background-position: center 0px;">
-    <div class="container text-center"> -->
+    <div class="container text-center"> 
 
   <div class="hero-overlay"></div> 
   <div class="hero-content-wrapper">
@@ -15,7 +15,7 @@ body_class: events
       <h2>YEP Events</h2>
     </div>
   </div>
-</div>
+</div>  -->
 
 {% capture nowunix %}{{'now' | date: '%s'}}{% endcapture %}
 
