--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ body_class: front
             <div id="mc_embed_signup_scroll">
               <div class="col-md-4 col-md-offset-4">
                 <div class="col-md-12">
+	         <h2 class="h1">Stay Connected to Our Work</h2>
                   <div class="mc-field-group col-md-6">
                     <label for="mce-FNAME" class="control-label">First Name  <span class="asterisk">*</span></label>
                     <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
