--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@ body_class: front
   <div class="container" style="padding-top: 10px; padding-bottom: 10px;">
     <div class="row">
       <div class="col-md-12">
+       <h2 class="h1">Stay Up-to-date </h2>
         <!-- Begin MailChimp Signup Form -->
         <div id="mc_embed_signup">
           <form action="https://yepnetworks.us11.list-manage.com/subscribe/post?u=5d936b18dafd103ed356a89c6&amp;id=620021804a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-horizontal hs-form" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
               <div class="col-md-4 col-md-offset-4">
                 <div class="col-md-12">
-	         <h2 class="h1">Stay Connected to Our Work</h2>
                   <div class="mc-field-group col-md-6">
                     <label for="mce-FNAME" class="control-label">First Name  <span class="asterisk">*</span></label>
                     <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
