--- a/index.html
+++ b/index.html
@@ -38,52 +38,7 @@ body_class: front
     </div>
   </section>
 </div>
- <!-- {% assign programs = site.programs | where:'featured', 'true' %}
-        {% for program in programs limit:3 %}
-          <div class="col-xs-12 col-md-4">
-            <div class="card">
-              <figure>
-                <img src="https://s3.amazonaws.com/static.pachamama.org/img/home/programs_callout_1.jpg">
-              </figure>
-              <div class="copy-holder">
-                <h3>Up to Us Education Program</h3>
-                <p>Transform your world through a Pachamama Alliance workshop, including our flagship Awakening the Dreamer program.
-                <br>
-                <a href="/engage" class="has-mp-click btn btn-donate" data-event-label="Click Up to Us Learn More Button">Learn More</a>
-                </p>
-              </div>
-            </div>
-          </div><!-- /.col-->
-         <!--  <div class="col-xs-12 col-md-4">
-            <div class="card">
-              <figure>
-                <img src="https://s3.amazonaws.com/static.pachamama.org/img/home/programs_callout_2.jpg">
-              </figure>
-              <div class="copy-holder">
-                <h3>Journey to the Amazon</h3>
-                <p>Accept the invitation of our indigenous partners and journey with us to their ancestral rainforest home.<br>
-                  <a href="/journeys" class="has-mp-click btn btn-donate" data-event-label="Click Journeys Learn More Button">Learn More</a>
-		            </p>
-              </div>
-            </div>
-          </div><!-- /.col -->
-          <!-- <div class="col-xs-12 col-md-4">
-            <div class="card">
-              <figure>
-                <img src="https://s3.amazonaws.com/static.pachamama.org/img/home/programs_callout_3.jpg">
-              </figure>
-              <div class="copy-holder">
-                <h3>Take a Stand for Life Itself</h3>
-                <p>Our advocacy initiatives in the Amazon forward a new worldview that respects the rights of indigenous peoples and rights of Nature.<br>
-                <a href="/advocacy" class="has-mp-click btn btn-donate" data-event-label="Click Advocacy Learn More Button">Learn More</a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div><!-- /.row -->
-      </div><!-- /.container -->
-     <!--</section> --> 
-        
+
 <section id="email-signup" style="background: #1E8BC9">
   <div class="container" style="padding-top: 10px; padding-bottom: 10px;">
     <div class="row">
@@ -147,7 +102,7 @@ body_class: front
             <h3><a href="#" title="{{ item.title }}">{{ item.title }}</a></h3>
           </div>
         </div>
-      <!-- {% endfor %} -->
+     {% endfor %}
     </div>
   </div>
 </section>
