--- a/events.html
+++ b/events.html
@@ -8,15 +8,13 @@ body_class: events
 ---
 <!-- <div id="hero" style="background-image: url(/assets/images/events/women_power_hour.png); background-position: center 0px;">
     <div class="container text-center"> 
-
   <div class="hero-overlay"></div> 
-  <div class="hero-content-wrapper">
+  <div class="hero-content-wrapper">  -->
     <div class="container text-center"> 
       <h2>YEP Events</h2>
     </div>
   </div>
-</div>  -->
-
+</div> 
 {% capture nowunix %}{{'now' | date: '%s'}}{% endcapture %}
 
 <div class="bg-gray overview">
