--- a/about.html
+++ b/about.html
@@ -24,13 +24,16 @@ sections:
   <div class="container pad-by-50">
     <div class="row">
       <div class="col-sm-12">
-        <h1 class="margin-top-0 margin-bottom-2"> About </h1>
-         <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 0.5em;">
-        Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success. 
-           </p>
+        <h1 class="margin-top-0 margin-bottom-2">About</h1>
+        <p style="font-size: 2.0rem; font-weight: 400; margin-bottom: 0.5em;">
+          Your Ethiopian Professionals Network (YEP) is a community of diverse professionals who strive for growth, excellence and success.
+        </p>
       </div>
-      <div class="container">
-        <p style="font-size: 1.0rem; font-weight: 400; margin-bottom: 0.5em;">
+    </div>
+  </div>
+</div>
+<div class="container">
+  <p style="font-size: 1.0rem; font-weight: 400; margin-bottom: 0.5em;">
   <section class="page-head">
     <div class="container">
       <div class="row">
