--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -8,14 +8,15 @@ body_class: about
 <h1 class="margin-top-4">Accomplishments</h1>
 
 <p>
-Today, YEP convenes more than 5,000 members with the primary focus on developing and maximizing the Ethiopian community. As YEP grows, we continue to update our benefits and offerings to support our members in the best ways possible.
+YEP convenes more than 5,000 members with a primary focus on developing and maximizing the power of the Ethiopian community. Over the last 7 years, YEP has opened doors, hosted important conversations, and provided much sought-after training and development.
 </p>
-<h2>Past Activities</h2>
+<p>
+Here’s a snapshot: 
 <ul>
-  <li><b>Speaker Series:</b> Feature inspirational speakers to educate and empower young professionals</li>
-  <li><b>Career Workshops:</b> Host workshops to help members further develop job-seeking skills and explore career opportunities. </li>
-  <li><b>Mentorship Program:</b> Provide academic support and guidance to students in high school and college</li>
-  <li><b>Supporting Newcomers:</b> Assist newcomers to the United States in their educational and career path  </li>
-  <li><b>Networking:</b> Create opportunities for Ethiopian professionals to meet and share resources among fellow professionals </li>
-  <li><b>Annual Fundraising Gala:</b> Host 300+ professionals to raise funds in support of future programs</li>
+  <li><b>Speaker Series:</b> Feature inspirational speakers to educate and empower young professionals.</li>
+  <li><b>Career Workshops:</b>Host workshops to help members further develop job-seeking skills and explore career opportunities. </li>
+  <li><b>Mentorship Program:</b> Provide academic support and guidance to students in high school and college.</li>
+  <li><b>Supporting Newcomers:</b> Assist newcomers to the United States in their pursuit of education and career success. </li>
+  <li><b>Networking:</b> Create opportunities for professionals to meet and share resources. </li>
+  <li><b>Annual Fundraising Gala:</b> Host 300+ professionals to raise funds in support of future programs. </li>
 </ul>
