--- a/_programs/career-development.html
+++ b/_programs/career-development.html
@@ -2,7 +2,7 @@
 layout: program
 title: Career Development
 img: career-development.jpg
-description: Providing the tools and resources that enable members to excel in their different stages of career development journey.
+description: Tools and resources to sharpen members’ knowledge and skills. 
 categories:
 - programs
 ---
