Added class to intro.

--- a/_pages/speakers.html
+++ b/_pages/speakers.html
@@ -5,7 +5,9 @@ permalink: /speakers/
 body_class: speakers
 ---
 <h1 class="margin-top-4">Past Speakers</h1>
-<p>Meet the team that volunteer their time, expertise, and passion to build a thriving community.</p>
+
+<p class="intro">Meet the team that volunteer their time, expertise, and passion to build a thriving community.</p>
+
 <div class="row card-grid">
   {% assign speakers = site.data.speakers %}
   {% for speaker in speakers %}
