--- a/_pages/speakers.html
+++ b/_pages/speakers.html
@@ -6,7 +6,9 @@ body_class: speakers
 ---
 <h1 class="margin-top-4">Past Speakers</h1>
 
-<p class="intro">Meet the team that volunteer their time, expertise, and passion to build a thriving community.</p>
+<p class="intro">
+Meet the extraordinary individuals who have spoken at our events throughout the years.
+</p>
 
 <div class="row card-grid">
   {% assign speakers = site.data.speakers %}
