Included new hero section to homepage.

--- a/index.html
+++ b/index.html
@@ -2,14 +2,8 @@
 layout: default
 body_class: front
 ---
-<section class="hero" style="background-image: url(assets/images/hero/about_us_1.png)">
-  <div class="inner">
-    <div class="copy">
-      <h1>The Future of the Ethiopian Diaspora</h1>
-      <p>Harnessing the power of the diaspora to transform communities and shape the next generation of thinkers and leaders.</p>
-    </div>
-  </div>
-</section>
+
+{% include hero.html %}
 
 <div class="overview featured-programs">
   <section class="sub-navigation">
