--- a/_pages/accomplishments.html
+++ b/_pages/accomplishments.html
@@ -13,7 +13,7 @@ YEP convenes more than 5,000 members with a primary focus on developing and maxi
 <p>
 Here’s a snapshot: 
 <ul>
-  <li><b>Speaker Series:</b> Feature inspirational speakers to educate and empower young professionals.</li>
+  <li><b> <a href=https://yepnetwork.github.io/speakers/>Speaker Series:</a> </b> Feature inspirational speakers to educate and empower young professionals.</li>
   <li><b>Career Workshops:</b>Host workshops to help members further develop job-seeking skills and explore career opportunities. </li>
   <li><b>Mentorship Program:</b> Provide academic support and guidance to students in high school and college.</li>
   <li><b>Supporting Newcomers:</b> Assist newcomers to the United States in their pursuit of education and career success. </li>
