Updated about sections.

--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -5,15 +5,28 @@ header: Mission
 permalink: /about/mission/
 body_class: about
 ---
-<h1> Our Vision </h1>
+<h1>Mission & Vision</h1>
+
+<p class="intro">
+"No one person can make it in life without the support and guidance of other people in their lives." - Shimelse Mekonnen
+</p>
+
+<img title="Mission & Vision" alt="" src="/assets/images/misc/yep-vision.jpg" />
+
+<h2>Our Mission</h2>
+
 <p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
-  A strong community that shares ideas, skills and resources to enrich lives.
-  </p>
-<h1> Our Mission </h1>
+To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.
+</p>
+
+<h2>Our Vision</h2>
+
 <p style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
-  To inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.
-  </p>
-<h1>Goals</h1>
+A strong community that shares ideas, skills and resources to enrich lives.
+</p>
+
+<h2>Goals</h2>
+
 <ul style="font-size: 1.5rem; font-weight: 400; margin-bottom: 0.05em;">
   <li>Creating networking opportunties for members to share resources </li>
   <li>Providing a platform that enables members to share job opportunities </li>
