--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ sections:
 ---
 {% include about-nav.html %}
 <div class="prose bg-white">
-  <div class="container pad-by-50">
+  <div class="container">
     <div class="row">
       <div class="col-sm-12">
         <h1 class="margin-top-0 margin-bottom-2">About</h1>
