--- a/_pages/team.html
+++ b/_pages/team.html
@@ -1,11 +1,12 @@
 ---
-layout: about
+layout: team
 title: Team
 header: Team
 permalink: /about/team/
 body_class: team
 ---
-<h1 class="margin-top-4">Our Team</h1>
+<h1>Our Team</h1>
+
 <p>Meet the team that volunteer their time, expertise, and passion to build a thriving community.</p>
 <div class="row card-grid">
   {% assign persons = site.data.team %}
