--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -9,8 +9,8 @@ body_class: donate
     <div class="col-sm-12">
       <h1>Donate</h1>
       <p>
-        Lorem ipsum
-      </p>
+       Your donation will be used to support the different YEP programs and activities.
+      </p>     
     </div>
   </div>
 </div>
