--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -4,7 +4,7 @@ title: Donate
 permalink: /donate/
 body_class: donate
 ---
-<!–– <div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-sm-12">
       <h1>Donate</h1>
