--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -13,8 +13,9 @@ body_class: donate
       </p>     
     </div>
   </div>
-</div> ––>
- <div id="post-41365" class="post-41365 page type-page status-publish hentry">
+</div>
+ -->
+<div id="post-41365" class="post-41365 page type-page status-publish hentry">
         <div class="content">
           <div class="container">
                     <div class="row">
@@ -86,4 +87,3 @@ body_class: donate
             </div>
         </footer>
   </body>
-</html>
