--- a/_pages/volunteer.html
+++ b/_pages/volunteer.html
@@ -45,7 +45,7 @@ body_class: volunteer
 	<input type="text" value="" name="MMERGE5" class="required" id="mce-MMERGE5">
 </div>
 <div class="mc-field-group">
-	<label for="mce-MMERGE3">Please select one of the departments that you are </label>
+	<label for="mce-MMERGE3">Please select one of the departments that you are interested in</label>
 	<select name="MMERGE3" class="" id="mce-MMERGE3">
 	<option value=""></option>
 	<option value="Job Placement Coordinator">Job Placement Coordinator</option>
@@ -62,7 +62,7 @@ body_class: volunteer
 	</select>
 </div>
 <div class="mc-field-group">
-	<label for="mce-MMERGE6">Have experience in any of the following areas </label>
+	<label for="mce-MMERGE6">YEP is constantly seeking volunteers with specific skill sets. Do you have experience in any of the areas of expertise below? Either check any that apply or provide your inputs  </label>
 	<select name="MMERGE6" class="" id="mce-MMERGE6">
 	<option value=""></option>
 	<option value="Website Design and Maintenance">Website Design and Maintenance</option>
@@ -80,7 +80,7 @@ body_class: volunteer
 		<div class="response" id="mce-success-response" style="display:none"></div>
 	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5d936b18dafd103ed356a89c6_40d263ea9e" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="submit" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form>
 </div>
