--- a/_pages/sponsor.html
+++ b/_pages/sponsor.html
@@ -4,13 +4,36 @@ title: Donate
 permalink: /sponsor/
 body_class: sponsor
 ---
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Sponsor</h1>
-      <p>
-        Lorem ipsum
-      </p>
+ <div class="content">
+      <div class="container">
+          <div class="row">
+               <div class="col-sm-7 col-md-7">
+                  <h1>Sponsors</h1>
+               <p class="intro"> Close to 10 years, YEP has created a platform for Ethiopian Professionals to find meaningful connections and the works we have done has inspired individuals everywhere to bring forth a thriving, just and sustainable future. As a donor, you can ensure this work continues.</p>
+                            
     </div>
-  </div>
-</div>
+       <div class="col-sm-5 col-md-4 col-md-offset-1">
+         <aside class="sidebar">
+                                                                                    
+   <div class="well">
+    <h2>Mission </h2>
+    <p> Our Mission is to inspire, educate and empower the Ethiopian professional community to make a positive impact in the world.</p>
+    <hr>
+    <h2> Vision</h2>
+      <p> Our Vision is to create a strong community that shares ideas, skills and resources to enrich lives.</p>                              <hr>
+      <h2>Our Programs</h2>
+      <li>Career Development </li>
+      <li>Personal and Professional Empowerment </li>
+      <li>Mentorship </li>
+      <li>Recent Arrivals</li>
+      <li>Diaspora and Community Engagement</li>
+    <hr>
+     <h2>Contact</h2>                          
+     <a href="mailto:info@yepnetwork.org">info@yepnetwork.org</a>
+ </p>
+      </div>
+          </aside>
+            </div>
+            </div><!-- /.row -->
+            </div><!--/.container-->
+        </div><!-- /.content -->
