--- a/_pages/volunteer.html
+++ b/_pages/volunteer.html
@@ -9,8 +9,7 @@ body_class: volunteer
           <div class="row">
                <div class="col-sm-7 col-md-7">
                   <h1>Volunteers</h1>
-               <p class="intro"> Close to 10 years, YEP has created a platform for Ethiopian Professionals to find meaningful connections and the works we have done has inspired individuals everywhere to bring forth a thriving, just and sustainable future. As a donor, you can ensure this work continues.</p>
-		       
+               <p class="intro"> Close to 10 years, YEP has created a platform for Ethiopian Professionals to find meaningful connections and the works we have done has inspired individuals everywhere to bring forth a thriving, just and sustainable future.</p>		       
 	<!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 <style type="text/css">
@@ -53,7 +52,7 @@ body_class: volunteer
 	<input type="text" value="" name="MMERGE5" class="required" id="mce-MMERGE5">
 </div>
 <div class="mc-field-group">
-	<label for="mce-MMERGE3">Are you interested in volunteering for a specific </label>
+	<label for="mce-MMERGE3">Are you interested in volunteering for a specific department? Pleases select one:  </label>
 	<select name="MMERGE3" class="" id="mce-MMERGE3">
 	<option value=""></option>
 	<option value="Job Placement Coordinator">Job Placement Coordinator</option>
@@ -70,7 +69,7 @@ body_class: volunteer
 	</select>
 </div>
 <div class="mc-field-group">
-	<label for="mce-MMERGE6">YEP is constantly seeking volunteers with specific </label>
+	<label for="mce-MMERGE6">YEP is constantly seeking volunteers with specific skill sets. Do you have experience in any of the areas of expertise below? Either check any that apply or provide your inputs  </label>
 	<select name="MMERGE6" class="" id="mce-MMERGE6">
 	<option value=""></option>
 	<option value="Website Design and Maintenance">Website Design and Maintenance</option>
