--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -11,7 +11,7 @@ body_class: about
 "When spider webs unite, they can tie up a lion" - Ethiopian Proverb
 </p>
 
-<img title="Mission & Vision" alt="" src="/assets/images/misc/yep-vision.jpg" />
+<img title="Vision & Mission " alt="" src="/assets/images/misc/yep-vision.jpg" />
 
 <h2>Our Vision</h2>
 
